{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 188,
  "lineage": "bef0f6f1-6004-9826-bbda-06206af69c27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:203303191911:internet-gateway/igw-04dc41d22f0736c65",
            "id": "igw-04dc41d22f0736c65",
            "owner_id": "203303191911",
            "tags": {
              "Name": "incentknow-internet-gateway"
            },
            "vpc_id": "vpc-003e5cca3d1e54a4b"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01da56ec6801a92af",
            "owner_id": "203303191911",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04dc41d22f0736c65",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-003e5cca3d1e54a4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "incentknow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:203303191911:security-group/sg-072027072de38ce19",
            "description": "Access in incentknow-vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072027072de38ce19",
            "ingress": [],
            "name": "incentknow-sg",
            "name_prefix": "",
            "owner_id": "203303191911",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-003e5cca3d1e54a4b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:203303191911:subnet/subnet-03d6cea7114eedbb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-03d6cea7114eedbb2",
            "map_public_ip_on_launch": true,
            "owner_id": "203303191911",
            "tags": {
              "Name": "incentknow-subnet-1a"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-003e5cca3d1e54a4b"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:203303191911:subnet/subnet-00905ecbc0b33fff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-00905ecbc0b33fff0",
            "map_public_ip_on_launch": true,
            "owner_id": "203303191911",
            "tags": {
              "Name": "incentknow-subnet-1c"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-003e5cca3d1e54a4b"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:203303191911:subnet/subnet-0e5d6667b766db9f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0e5d6667b766db9f3",
            "map_public_ip_on_launch": true,
            "owner_id": "203303191911",
            "tags": {
              "Name": "incentknow-subnet-1d"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-003e5cca3d1e54a4b"
          },
          "dependencies": [
            "aws_vpc.incentknow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "incentknow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:203303191911:vpc/vpc-003e5cca3d1e54a4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0eec102f501be02db",
            "default_route_table_id": "rtb-01da56ec6801a92af",
            "default_security_group_id": "sg-02d75cbdaf37997a3",
            "dhcp_options_id": "dopt-00141067",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-003e5cca3d1e54a4b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01da56ec6801a92af",
            "owner_id": "203303191911",
            "tags": {
              "Name": "incentknow-vpc"
            }
          }
        }
      ]
    }
  ]
}